welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: not found: value color
  if (getCouleurSol()==color.green) {recule(); return true}
                       ^